--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
   </header>
    <main>
     <section class="intro">
-      <!-- <img class="bg-left" src="./images/bg-pattern-intro-left-desktop.svg" alt=""> -->
+      <img class="bg-left" src="./images/bg-pattern-intro-left-desktop.svg" alt="">
       <div class="intro-content">
         <img class="image-intro-mobile" src="./images/image-intro-mobile.jpg" alt="image intro">
+        <img class="image-intro-desktop" src="./images/image-intro-desktop.jpg" alt="image intro">
         <div class="intro-text">
           <hr class="line-Intro line-Style">
           <h2 class="intro-title title">
@@ -54,7 +55,7 @@
           </button>
         </div>
       </div>
-      <!-- <img class="bg-right" src="./images/bg-pattern-intro-right-desktop.svg" alt="lines style"> -->
+      <img class="bg-right" src="./images/bg-pattern-intro-right-desktop.svg" alt="lines style">
     </section>
 
     <section class="work-section">
@@ -108,13 +109,13 @@
           HOW WE WORK
         </button>
       </div>
-      <img src="./images/bg-pattern-how-we-work-mobile.svg" class="bg-banner" alt="">
-      <!-- <img src="./images/bg-pattern-how-we-work-desktop.svg" alt=""> -->
+      <img src="./images/bg-pattern-how-we-work-mobile.svg" class="bg-banner-mobile" alt="">
+      <img src="./images/bg-pattern-how-we-work-desktop.svg" class="bg-banner-desktop" alt="">
     </section>
   </main>
   <footer>
-    <!-- <img src="./images/bg-pattern-footer-desktop.svg" alt=""> -->
-    <img src="./images/bg-pattern-footer-mobile.svg" class="bg-footer" alt="">
+    <img src="./images/bg-pattern-footer-desktop.svg" class="bg-footer-desktop" alt="">
+    <img src="./images/bg-pattern-footer-mobile.svg" class="bg-footer-mobile" alt="">
     <div class="header-footer">
       <div class="logo">
         <img src="./images/logo.svg" alt="">
